Remove guava from tests